@@ -84,6 +84,7 @@ sub reset {
   my %options = @_;
 
   $options{name} ||= 'Simple';
+  $options{version} ||= q{'0.01'};
   $options{dir} = File::Spec->rel2abs(
     defined $options{dir} ? $options{dir} : MBTest->tmpdir
   );
@@ -179,7 +180,7 @@ sub _gen_default_filedata {
       package $self->{name};
 
       use vars qw( \$VERSION );
-      \$VERSION = '0.01';
+      \$VERSION = $self->{version};
 
       use strict;
 
@@ -214,7 +215,7 @@ sub _gen_default_filedata {
     $self->$add_unless($module_filename, undent(<<"      ---"));
       package $self->{name};
 
-      \$VERSION = '0.01';
+      \$VERSION = $self->{version};
 
       require Exporter;
       require DynaLoader;
@@ -627,6 +628,7 @@ The C<new> method does not write any files -- see L</regen()> below.
 
   my $dist = DistGen->new(
     name        => 'Foo::Bar',
+    version     => '0.01',
     dir         => MBTest->tmpdir,
     xs          => 1,
     no_manifest => 0,
@@ -641,6 +643,13 @@ The parameters are as follows.
 The name of the module this distribution represents. The default is
 'Simple'.  This should be a "Foo::Bar" (module) name, not a "Foo-Bar"
 dist name.
+
+=item version
+
+The version string that will be set. (E.g. C<our $VERSION = 0.01>)
+Note -- to put this value in quotes, add those to the string.
+
+  version => q{'0.01_01'}
 
 =item dir
 
